@@ -53,6 +53,7 @@ pyqtgraph-0.9.9  [unreleased]
     - Added ViewBox.invertX()
     - Docks now have optional close button
     - Added InfiniteLine.setHoverPen
+    - Added GLVolumeItem.setData
 
   Bugfixes:
     - PlotCurveItem now has correct clicking behavior--clicks within a few px
